# dapr-agents

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CODEOWNERS  GOVERNANCE.md  Makefile  README.md  dev-requirements.txt  index.html  mypy.ini  pyproject.toml  requirements.txt  sitemap.xml  tox.ini
.devcontainer/: devcontainer.json  post-create.sh
.github/scripts/: check_pypi_bump.py  dapr_bot.js  python_bump.py
.github/workflows/: build.yaml  bump-dapr-deps.yaml  ci-e2e-ollama.yaml  docs.yml  integration-tests.yaml  release.yml  schema-compat-comment.yaml
concepts/agents/: index.html
concepts/arxiv_fetcher/: index.html
concepts/messaging/: index.html
concepts/text_splitter/: index.html
cookbook/vectorstores/: postgres_sentencetransformers_all-MiniLM-L6-v2.ipynb
dapr_agents/: __init__.py  hooks.py  lifecycle.py
dapr_agents/agent/: __init__.py  base.py
dapr_agents/agents/: __init__.py  base.py  components.py  configs.py  constants.py  durable.py  handoffs.py  schemas.py  standalone.py
dapr_agents/document/: __init__.py
dapr_agents/executors/: __init__.py  docker.py  local.py
dapr_agents/llm/: __init__.py  chat.py
dapr_agents/memory/: __init__.py  base.py  daprstatestore.py  liststore.py  vectorstore.py
dapr_agents/observability/: __init__.py  constants.py  context_propagation.py  context_storage.py  instrumentor.py  message_processors.py  utils.py
dapr_agents/prompt/: __init__.py  prompty.py
dapr_agents/registry/: README.md  __init__.py  metadata.py  registry.py  registry_mixin.py
dapr_agents/service/: __init__.py
dapr_agents/storage/: __init__.py
dapr_agents/streaming/: __init__.py  consumers.py  emitter.py  keys.py  listeners.py
dapr_agents/tool/: __init__.py  base.py  executor.py  workflow_context.py
dapr_agents/types/: __init__.py  agent.py  exceptions.py  executor.py  llm.py  message.py  metadata.py  streaming.py  tools.py  workflow.py
dapr_agents/utils/: __init__.py  dapr_client_factory.py  logger.py  semver.py  signal_mixin.py
dapr_agents/workflow/: __init__.py  agentic.py  base.py  decorators.py  task.py  utils.py
docs/: agent_registry_metadata.md  index.md  tool_type_constants.md
docs/concepts/: agents.md
docs/development/: README.md
docs/home/: installation.md
examples/: README.md
examples/01-llm-call-anthropic/: README.md
examples/01-llm-call-dapr/: README.md  basic.prompty  pyproject.toml
examples/01-llm-call-elevenlabs/: README.md  pyproject.toml
examples/01-llm-call-hugging-face/: README.md  basic.prompty  pyproject.toml  text_completion_with_tools.py
examples/01-llm-call-nvidia/: README.md  basic.prompty  (+1 more)
ext/dapr-agents-ext-drasi/: AGENTS.md  PROVENANCE.md  README.md  pyproject.toml
ext/dapr-agents-ext-drasi/dapr_agents/ext/drasi/: __init__.py  activations.py  types.py
ext/dapr-agents-ext-drasi/dapr_agents/ext/drasi/schemas/: __init__.py
ext/dapr-agents-ext-drasi/dapr_agents/ext/drasi/schemas/unpacked/: ChangeNotification.py  ChangePayload.py  ChangeSource.py  ControlPayload.py  ControlSignalNotification.py  Notification.py  Op.py  ReloadHeader.py  ReloadItem.py  Versions.py  __init__.py
ext/dapr-agents-ext-drasi/dapr_agents/ext/drasi/utils/: filters.py  types.py  validation.py
ext/dapr-agents-ext-drasi/dapr_agents_drasi/: workflow.py
ext/dapr-agents-ext-drasi/schemas/output-unpacked/: ChangeNotification.yaml  ChangePayload.yaml  ChangeSource.yaml  ControlPayload.yaml  ControlSignalNotification.yaml  Notification.yaml  Op.yaml  ReloadHeader.yaml  ReloadItem.yaml  Versions.yaml
ext/dapr-agents-ext-drasi/scripts/: generate-drasi-models.sh  regen-drasi-models.sh
ext/dapr-agents-ext-drasi/tests/: __init__.py  test_drasi_trigger.py
ext/dapr-agents-ext-drasi/tests/schemas/: test_unpacked_event_models.py  test_unpacked_models.py
ext/dapr-agents-ext-drasi/tests/utils/: test_validation.py
quickstarts/: 03_durable_agent_pubsub.py  04_durable_agent_pubsub.py  05_agent_memory.py  06_durable_agent_http.py  07_durable_agent_pubsub.py  08_durable_agent_retry.py  09_expert_agent.py  09_triage_agent.py  09_workflow_agents.yaml  10_durable_agent_mcp_workflow_proxy.py  10_durable_agent_tracing.py  11_durable_agent_hot_reload.py  README.md  durable_agent_retry.py  function_tools.py  pyproject.toml  validate.sh
scripts/: check_schema_compat.py  generate_metadata_schema.py  generate_schema.py
search/: search_index.json
tests/: README.md  conftest.py  test_hooks.py  test_lifecycle.py  test_signal_handlers.py
(+643 files in other folders)
