#
# Copyright 2026 The Dapr Authors
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[project]
name = "dapr-agents-ext-drasi"
version = "0.1.0"  # TODO: switch to dynamic versioning
description = "Drasi extension for Dapr Agents"
keywords = ["dapr", "agents", "drasi"]
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {file = "LICENSE"}
authors = [
    {name = "Dapr Authors", email = "dapr@dapr.io"}
]
dependencies = [
    "dapr-agents<2.0.0",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0,<2.0.0",
    "flake8>=7.3.0",
    "ruff>=0.14.11",
    "datamodel-code-generator==0.64.0",
]
test = [
    "pytest>=8.0.0,<10.0.0",
    "pytest-asyncio>=0.23.0,<2.0.0",
    "pytest-cov>=4.1.0,<8.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
]

[project.urls]
Documentation = "https://github.com/dapr/docs"
Source = "https://github.com/dapr/dapr-agents"

[tool.setuptools.packages.find]
include = ["dapr_agents.ext.drasi", "dapr_agents.ext.drasi.*"]
exclude = ["tests"]

[tool.setuptools.package-data]
"dapr_agents.ext.drasi" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.uv.sources]
dapr-agents = { workspace = true, editable = true }
